- Removed the manual scrape by tracking id since it's meant to be used with the register webhook
